--- a/src/app/modules/restrict/add-expenses/variable-expense/variable-expense.component.html
+++ b/src/app/modules/restrict/add-expenses/variable-expense/variable-expense.component.html
@@ -1,7 +1,7 @@
 <!-- create new expense-->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-blue">Criar despesa corrente variável</h1>
-  </div>
+  </div><hr>
   
   <!--form expenses-->
   <form #itemForm="ngForm" name="form" ngSubmit="onSubmit()">
