--- a/src/app/modules/restrict/list-expenses/list-expenses.component.html
+++ b/src/app/modules/restrict/list-expenses/list-expenses.component.html
@@ -2,7 +2,6 @@
 <br>
 <div class="container-fluid">
   <div class="row">
-    <!-- expense type -->
     <div class="col-sm-6">
       <label>Tipo de procura:</label>
       <select required name="searchType" class="form-control ml-1">
@@ -18,7 +17,7 @@
 
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
   <h1 class="h3 mb-0 text-blue">Listar todas as despesas</h1>
-</div>
+</div> 
 
 <!--overall search-->
 <div *ngIf="overall">
@@ -35,7 +34,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of expense">
+      <tr *ngFor="let item of expenseList">
         <td style="display:none;">{{ item.id }}</td>
         <td>{{ item.expenseName }}</td>
         <td>{{ item.expenseType }}</td>
@@ -67,7 +66,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of expense">
+      <tr *ngFor="let item of expenseList">
         <td style="display:none;">{{ item.id }}</td>
         <td>{{ item.expenseName }}</td>
         <td>{{ item.expenseSubtype }}</td>
@@ -99,7 +98,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of expense">
+      <tr *ngFor="let item of expenseList">
         <td style="display:none;">{{ item.id }}</td>
         <td>{{ item.expenseName }}</td>
         <td>{{ item.expenseType }}</td>
@@ -132,7 +131,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of expense">
+      <tr *ngFor="let item of expenseList">
         <td style="display:none;">{{ item.id }}</td>
         <td>{{ item.expenseName }}</td>
         <td>{{ item.expenseType }}</td>
