windows change service

--- a/src/app/modules/restrict/update-expense/update-expense.component.html
+++ b/src/app/modules/restrict/update-expense/update-expense.component.html
@@ -1,5 +1,5 @@
 <!-- update -->
-<div>
+<div (change)="checkTypeExpense()">
     <!-- create new expense-->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
       <h1 class="h3 mb-0 text-blue">Alterar despesa</h1>
