--- a/src/app/modules/restrict/personal-main/personal-main.component.html
+++ b/src/app/modules/restrict/personal-main/personal-main.component.html
@@ -206,7 +206,7 @@
         </div>
 
         <div *ngIf="update">
-          <app-update-expense [expenseUpdated]="expenseUpdate"></app-update-expense>
+          <app-update-expense [updatedExpense]="updateExpense"></app-update-expense>
 
         </div>
      
