--- a/src/app/modules/restrict/overall/overall.component.html
+++ b/src/app/modules/restrict/overall/overall.component.html
@@ -1,13 +1,37 @@
-<div class="d-sm-flex align-items-center justify-content-between mb-4">
+<div class="container-fluid">
+  <div class="row">
+      <div class="card-body">
+        <div>
+          <div style="display: block">
+            <canvas baseChart
+                    [datasets]="barChartData"
+                    [labels]="barChartLabels"
+                    [options]="barChartOptions"
+                    [legend]="barChartLegend"
+                    [chartType]="barChartType">
+            </canvas>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-blue">Dashboard</h1>
   </div>
-  <!-- Content Row -->
   <div class="container-fluid">
   <div class="row">
-    <!-- Area Chart -->
     <div class="col-sm-8">
       <div class="card shadow mb-4">
-        <!-- Card Header - Dropdown -->
         <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
           <h6 class="m-0 font-weight-bold text-primary">Earnings Overview</h6>
           <div class="dropdown no-arrow">
@@ -23,7 +47,6 @@
             </div>
           </div>
         </div>
-        <!-- Card Body -->
         <div class="card-body">
           <div class="chart-area">
             <canvas id="myAreaChart"></canvas>
@@ -31,10 +54,8 @@
         </div>
       </div>
     </div>
-    <!--Other chart-->
     <div class="col-sm-4">
       <div class="card shadow mb-4">
-        <!-- Card Header - Dropdown -->
         <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
           <h6 class="m-0 font-weight-bold text-primary">Revenue Sources</h6>
           <div class="dropdown no-arrow">
@@ -50,7 +71,6 @@
             </div>
           </div>
         </div>
-        <!-- Card Body -->
         <div class="card-body">
           <div class="chart-pie pt-4 pb-2">
             <canvas id="myPieChart"></canvas>
@@ -70,4 +90,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
