--- a/src/app/modules/public/public.component.html
+++ b/src/app/modules/public/public.component.html
@@ -21,15 +21,15 @@
 <header id="header">
   <div class="container d-flex">
     <div class="logo mr-auto">
-      <h1 class="text-light"><a (click)="goToHome()" style="cursor: pointer;"><span>ET-COSTS</span></a></h1>
+      <h1 class="text-light"><a (click)="windowsChangeService.goToHome()" style="cursor: pointer;"><span>ET-COSTS</span></a></h1>
     </div>
     <nav class="nav-menu d-none d-lg-block">
       <ul>
-        <li [ngClass]="{'active': selectedItem == home}"><a (click)="goToHome()" style="cursor: pointer;">Principal</a></li>
-        <li [ngClass]="{'active': selectedItem == about}"><a (click)="goToAbout()" style="cursor: pointer;">Sobre nós</a></li>
-        <li [ngClass]="{'active': selectedItem == services}"><a (click)="goToServices()" style="cursor: pointer;">Serviços</a></li>
-        <li [ngClass]="{'active': selectedItem == faq}"><a (click)="goToFaq()" style="cursor: pointer;">FAQs</a></li>
-        <li [ngClass]="{'active': selectedItem == contacts}"><a (click)="goToContacts()" style="cursor: pointer;">Contactos</a></li>
+        <li [ngClass]="{'active': selectedItem == windowsChangeService.home}"><a (click)="windowsChangeService.goToHome()" style="cursor: pointer;">Principal</a></li>
+        <li [ngClass]="{'active': selectedItem == windowsChangeService.about}"><a (click)="windowsChangeService.goToAbout()" style="cursor: pointer;">Sobre nós</a></li>
+        <li [ngClass]="{'active': selectedItem == windowsChangeService.services}"><a (click)="windowsChangeService.goToServices()" style="cursor: pointer;">Serviços</a></li>
+        <li [ngClass]="{'active': selectedItem == windowsChangeService.faq}"><a (click)="windowsChangeService.goToFaq()" style="cursor: pointer;">FAQs</a></li>
+        <li [ngClass]="{'active': selectedItem == windowsChangeService.contacts}"><a (click)="windowsChangeService.goToContacts()" style="cursor: pointer;">Contactos</a></li>
       </ul>
     </nav>
   </div>
@@ -45,23 +45,25 @@
 </section>
 <!-- End Welcome -->
 
+<br><br><br>
 <!-- ======= Content Section ======= -->
-<div *ngIf="home">
+<div *ngIf="windowsChangeService.home">
   <app-home></app-home>
 </div>
-<div *ngIf="about">
+<div *ngIf="windowsChangeService.about">
   <app-about></app-about>
 </div>
-<div *ngIf="contacts">
+<div *ngIf="windowsChangeService.contacts">
   <app-contacts></app-contacts>
 </div>
-<div *ngIf="faq">
+<div *ngIf="windowsChangeService.faq">
   <app-faq></app-faq>
 </div>
-<div *ngIf="services">
+<div *ngIf="windowsChangeService.services">
   <app-services></app-services>
 </div>
 <!-- End conr«tent Section -->
+<br><br><br>
 
 <!-- ======= Footer ======= -->
 <footer id="footer">
