--- a/src/app/modules/personal/expense/update-expense/update-expense.component.html
+++ b/src/app/modules/personal/expense/update-expense/update-expense.component.html
@@ -2,7 +2,7 @@
 <div (change)="checkTypeExpense()">  
     <!--fixed expenses-->
     <div *ngIf="windowService.fixedExpense">
-      <app-update-fixed-expense [updateFixed]="updatedExpense"></app-update-fixed-expense>
+      <app-update-fixed-expense [updateFixed]="updatedExpense" (expenseToUpdate)="expenseUpdated($event)"></app-update-fixed-expense>
   </div>
 
   <!--variable expenses-->
