--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="cta">
       <a routerLink="/login" class="btn btn-info">Login</a>&nbsp;&nbsp;
-      <a routerLink="/createAccount" class="btn btn-info">Criar Conta</a>
+      <a routerLink="/criar-conta" class="btn btn-info">Criar Conta</a>
     </div>
   </div>
 </section>
