routing restrict before fixing error

--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -20,11 +20,11 @@
 <header id="header">
   <div class="container d-flex">
     <div class="logo mr-auto">
-      <h1 class="text-light"><a (click)="windowsChangeService.goToHome()" style="cursor: pointer;"><span>ET-COSTS</span></a></h1>
+      <h1 class="text-light"><a routerLink="/principal" style="cursor: pointer;"><span>ET-COSTS</span></a></h1>
     </div>
     <nav class="nav-menu d-none d-lg-block">
       <ul>
-        <li routerLinkActive="active"><a routerLink="/home" style="cursor: pointer;">Principal</a></li>
+        <li routerLinkActive="active"><a routerLink="/principal" style="cursor: pointer;">Principal</a></li>
         <li routerLinkActive="active"><a routerLink="/sobre" style="cursor: pointer;">Sobre nós</a></li>
         <li routerLinkActive="active"><a routerLink="/servicos" style="cursor: pointer;">Serviços</a></li>
         <li routerLinkActive="active"><a routerLink="/faq" style="cursor: pointer;">FAQs</a></li>
