--- a/src/app/restrict/restrict.component.html
+++ b/src/app/restrict/restrict.component.html
@@ -7,96 +7,121 @@
       </a>
       <hr class="sidebar-divider my-0">
 
-      <!-- Dashboard -->
+      <!-- Home dashboard -->
       <li class="nav-item active pointerCursor">
-        <a class="nav-link" (click)="callDashboard()">
+        <a class="nav-link" (click)="openHomeDashboard()">
           <i class="fas fa-fw fa-tachometer-alt"></i>
-          <span>Visão Geral</span></a>
+          <span>Visão Geral</span>
+        </a>
       </li>
-
-      <!-- Expenses-->
       <hr class="sidebar-divider" >
+
+      <!--Expenses-->
       <div class="sidebar-heading text-white">Despesas</div>
+      <!-- Add expenses-->
       <li class="nav-item">
-        <div class="pointerCursor" (click)="newExpenses()">
-          <a class="nav-link collapsed" data-toggle="collapse" data-target="#collapseTwo" 
-          aria-expanded="true" aria-controls="collapseTwo">
-            <i class="fas fa-dollar-sign"></i>
-              <span>Adicionar</span>
+        <div class="pointerCursor" (click)="openAddExpenses()">
+          <a class="nav-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+            <i class="fas fa-dollar-sign"></i> <span>Adicionar</span>
           </a>
         </div>
-        <div class="collapse" *ngIf="expenses">
+        <div class="collapse" *ngIf="addExpense">
           <div class="bg-white py-2 collapse-inner rounded" >
             <h6 class="collapse-header">Despensas Correntes:</h6>
-            <!-- <a class="collapse-item pointerCursor" (click)="addNewExpense()">Nova Despesa</a> -->
-            <a class="collapse-item pointerCursor" (click)="addFixedExpense()">Fixa</a>
-            <a class="collapse-item pointerCursor" (click)="addVariableExpense()" >Variável</a>
+            <a class="collapse-item pointerCursor" routerLink="/despesas/adicionar-despesa/fixa" style="cursor: pointer;">Fixa</a>
+            <a class="collapse-item pointerCursor" routerLink="/despesas/adicionar-despesa/variavel" style="cursor: pointer;">Variável</a>
             <hr>
             <h6 class="collapse-header">Despensas Não Correntes:</h6>
-            <a class="collapse-item pointerCursor" (click)="addShortExpense()">Periodo Curto</a>
-            <a class="collapse-item pointerCursor" (click)="addLongExpense()">Periodo Longo</a>
+            <a class="collapse-item pointerCursor" routerLink="/despesas/adicionar-despesa/curta" style="cursor: pointer;">Periodo Curto</a>
+            <a class="collapse-item pointerCursor" routerLink="/despesas/adicionar-despesa/longa" style="cursor: pointer;">Periodo Longo</a>
+
           </div>
         </div>
       </li>
-
-      <!-- Search -->
+      <!-- Search expenses -->
       <li class="nav-item">
-        <div class="pointerCursor" (click)="newSearch()">
-          <a class="nav-link collapsed" data-toggle="collapse" data-target="#collapseUtilities" 
-          aria-expanded="true" aria-controls="collapseUtilities">
-            <i class="fas fa-search-dollar"></i>
-            <span>Procurar</span>
+        <div class="pointerCursor" (click)="openSearchExpenses()">
+          <a class="nav-link collapsed" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
+            <i class="fas fa-search-dollar"></i> <span>Procurar</span>
           </a>
         </div>
-        <div class="collapse" *ngIf="search">
+        <div class="collapse" *ngIf="searchExpense">
           <div class="bg-white py-2 collapse-inner rounded pointerCursor">
             <h6 class="collapse-header">Tipo de procura:</h6>
-            <a class="collapse-item" (click)="searchAlExpenses()">Todas as despesas</a>
+            <!-- <a class="collapse-item" (click)="searchAlExpenses()">Todas as despesas</a> -->
+            <a class="collapse-item" >Todas as despesas</a>
           </div>
         </div>
       </li>
-
-      <!-- Divider -->
       <hr class="sidebar-divider">
 
-      <!-- Heading -->
+      <!-- Revenue -->
       <div class="sidebar-heading text-white">Receitas</div>
-
-      <!-- Nav Item - Pages Collapse Menu -->
+      <!-- register -->
       <li class="nav-item">
-        <div class="pointerCursor" (click)="newRevenue()">
+        <div class="pointerCursor" (click)="openAddRevenue()">
           <a class="nav-link collapsed" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
             <i class="fas fa-fw fa-folder"></i>
             <span>Registar</span>
           </a>
         </div>
-        <div class="collapse" *ngIf="revenue">
+        <div class="collapse" *ngIf="addRevenue">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Tipo de receitas:</h6>
             <a class="collapse-item" >Nova</a>
           </div>
         </div>
       </li>
-
+      <!--search-->
+      <li class="nav-item">
+        <div class="pointerCursor" (click)="openSearchRevenue()">
+          <a class="nav-link collapsed" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
+            <i class="fas fa-search-dollar"></i>
+            <span>Procurar</span>
+          </a>
+        </div>
+        <div class="collapse" *ngIf="searchRevenue">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Tipo de receitas:</h6>
+            <a class="collapse-item" >Nova</a>
+          </div>
+        </div>
+      </li>
       <hr class="sidebar-divider">
 
-      <!--Charts -->
+      <!-- Dashboards -->
+      <div class="sidebar-heading text-white">Dashboards</div>
+      <!--charts-->
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
-          <i class="fas fa-fw fa-chart-area"></i>
-          <span>Graficos</span></a>
+        <div class="pointerCursor" (click)="openGraphic()">
+          <a class="nav-link collapsed" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
+            <i class="fas fa-fw fa-chart-area"></i>
+            <span>Gráficos</span>
+          </a>
+        </div>
+        <div class="collapse" *ngIf="graphic">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Tipo de receitas:</h6>
+            <a class="collapse-item" >Nova</a>
+          </div>
+        </div>
       </li>
-
-      <!-- Nav Item - Tables -->
       <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-          <i class="fas fa-fw fa-table"></i>
-          <span>Tablas</span></a>
+        <div class="pointerCursor" (click)="openAddTable()">
+          <a class="nav-link collapsed" data-toggle="collapse" data-target="#collapsePages" aria-expanded="true" aria-controls="collapsePages">
+            <i class="fas fa-fw fa-table"></i>
+            <span>Tabelas</span>
+          </a>
+        </div>
+        <div class="collapse" *ngIf="table">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Tipo de receitas:</h6>
+            <a class="collapse-item" >Nova</a>
+          </div>
+        </div>
       </li>
-
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
-
     </ul>
     <!-- End of Sidebar -->
 
@@ -171,13 +196,14 @@
 
       <!-- Begin Pges Content -->
       <div class="container-fluid">
+        <router-outlet></router-outlet>
 
         <!-- change to add expense  -->
         <!-- <div *ngIf="newExpense">
           <app-add-expense (expenseToSend)="expenseToReceive($event)"></app-add-expense>
         </div> -->
 
-        <div *ngIf="fixedExpense">
+        <!-- <div *ngIf="fixedExpense">
           <app-fixed-expense (expenseToSend)="expenseToReceive($event)"></app-fixed-expense>
         </div>
 
@@ -193,15 +219,13 @@
           <app-long-expense ></app-long-expense>
         </div>
 
-
-        <!-- change to list expense page -->
         <div *ngIf="searchAll">
           <app-list-expenses (expenseId)="getExpensId($event)"></app-list-expenses>
 
         </div>
 
         <div *ngIf="dashbord">
-          <app-overall></app-overall>
+          <app-charts-tables></app-charts-tables>
 
         </div>
 
@@ -212,7 +236,7 @@
 
         <div *ngIf="view">
           <app-view-expense></app-view-expense>
-        </div>
+        </div> -->
      
 
     </div>
